use getFirst instead of get(0) in tests make asserts calls more clear